# extended-brookshear-assembler

./: Cargo.toml  README.md
crates/assembler_cli/: Cargo.toml
crates/assembler_cli/src/: main.rs
crates/assembly/: Cargo.toml
crates/assembly/src/: common.rs  errors.rs  instructions.rs  lexer.rs  lib.rs  parser.rs  serialize.rs  structured_instruction.rs
crates/machine/: Cargo.toml
crates/machine/src/: lib.rs
crates/ui/: .gitignore  Cargo.toml  index.html
crates/ui/assets/: manifest.json  sw.js
crates/ui/src/: ansi.rs  app.rs  helpers.rs  lib.rs  main.rs
crates/ui/src/app/: tables.rs  windows.rs
crates/ui/src/helpers/: mod.rs  native.rs  web.rs
doc/: README.md  asmhelp.md  bmhelp.md  convert_for_embedding.sh
doc/for_embedding/: README.md  asmhelp.md  bmhelp.md
examples/: chessboard.txt  invalid-incorrect-numeric-constant.txt  invalid-syntax-error.txt  invalid-unknown-constant.txt  invalid-unknown-mnemonic-jbrookshearmachine.txt  invalid-unknown-mnemonic.txt  invalid-wrong-operands-jbrookshearmachine.txt  jbrookshearmachine-jmp-oversight.txt
scripts/: subset_epaint_fonts.py
