[workspace]
members = ["crates/assembler_cli", "crates/assembly", "crates/ui", "crates/machine"]
package.authors = ["Ashley Hawkins <awhawkins@proton.me>"]
package.license = "GPL-3.0-only"
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }


[profile.release]
opt-level = "z" # fast and small wasm
strip = true
lto = true
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
