[workspace]
members = ["crates/assembler_cli", "crates/assembly", "crates/ui", "crates/machine"]
package.authors = ["Ashley Hawkins <awhawkins@proton.me>"]
package.license = "GPL-3.0-only"
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", features = ["derive"] }
regex = "1.12.3"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"

[profile.release]
opt-level = "z" # fast and small wasm
strip = true
lto = true
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
