[workspace]
members = ["crates/assembler_cli", "crates/assembly", "crates/ui", "crates/machine"]
package.authors = ["Ashley Hawkins <awhawkins@proton.me>"]
package.license = "GPL-3.0-only"
resolver = "3"

[workspace.dependencies]
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
regex = { version = "1.12.3", default-features = false }
strum = { version = "0.28.0", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.18", default-features = false }

[profile.release]
opt-level = "z" # fast and small wasm
strip = true
lto = true
codegen-units = 1

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
