[package]
name = "brookshear_assembly"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
ariadne = "0.6.0"
chumsky = { version = "0.12.0", features = ["pratt"] }
logos = "0.16.1"
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
