[package]
name = "brookshear_machine"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true

[dependencies]
brookshear_assembly = { version = "0.1.0", path = "../assembly" }
thiserror.workspace = true
serde.workspace = true
serde-big-array = "0.5.1"

[features]
undo = []
