[package]
name = "brookshear_ui"
version = "0.1.0"
edition = "2024"
authors.workspace = true
license.workspace = true
include = ["**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
brookshear_assembly = { path = "../assembly" }
brookshear_machine = { path = "../machine", features = ["undo"] }
egui = "0.34.1"
egui_extras = "0.34.1"
eframe = { version = "0.34.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# You only need serde if you want app persistence:
serde.workspace = true
rfd = "0.17.2"
futures = "0.3.32"
anstyle-parse = "1.0.0"
egui_commonmark = { features = [
    "macros",
], git = "https://github.com/ashley-hawkins/egui_commonmark.git", rev = "710c2e6d93be27e6323632958097e7e329e76d76" }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
image = { version = "0.25.10", default-features = false, features = ["png"] }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-time = "1.1.0"
js-sys = "0.3.92"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
log = "0.4.27"
